LESS on CSS migration

--- a/webroot/css/less/base.less
+++ b/webroot/css/less/base.less
@@ -1,20 +1,15 @@
-
-@import '../../../../../../../twb/less/bootstrap.less';
-@import '../../../../../../../twb/less/responsive.less';
-
-
-@iconSpritePath: '../../img/glyphicons-halflings.png';
-@iconWhiteSpritePath: '../../img/glyphicons-halflings-white.png';
 //HACKS
 .tab-content { display:block; width:auto; overflow: auto; }
 .tab-content>div { min-height: 100px; }
 .dropdown-menu { z-index:9999; }
 
-h1 { font-weight:normal; font-size:20px; color:#08C; line-height:40px; padding-left:50px;}
+h1 { font-weight:normal; font-size:20px; color:#08C; line-height:1; margin:0; padding-left:50px;}
 hr { margin: 10px 0; border-top: 1px dotted #ddd; }
 form { margin:0; }
-a:link, a:visited, a:hover, a:active, button, button::-moz-focus-inner { outline:none; } 
+select, .chzn-container a.chzn-single { background:#fff; }
 
+a:link, a:visited, a:hover, a:active, button, button::-moz-focus-inner { outline:none; } 
+.input-append div, .input-prepend div { font-size:12px; }
 .full { width: 100%; }
 .center { text-align: center; }
 .right { text-align: right; }
@@ -38,7 +33,7 @@ span.details {
   &.blue { color:#4a86e8; font-weight: bold; }
 }
 
-.loading_window { position:absolute; margin:-18px; background:url('../img/spinner.gif') transparent no-repeat; width:35px; height:35px; z-index:1201; top:50%; left:50%; }
+.loading_window { position:absolute; margin:-18px; background:url('../cake_tools/img/spinner.gif') transparent no-repeat; width:35px; height:35px; z-index:1201; top:50%; left:50%; }
 .ui-widget-overlay { position:absolute; background-color: #fff; opacity: 0.8; -moz-opacity: 0.8; filter:alpha(opacity=8); z-index:1200;}
 .ui-state-active { 
   background:#468847;
@@ -94,92 +89,7 @@ span.details {
 
 }
 
-table {
-  &.table thead {
-    >tr>th { text-transform: uppercase; border-bottom: 2px solid #aaa;}
-  }
-  &.selectable {
-    >tbody {
-      cursor:pointer;
-      tr.line_selected>td{ background:#D9EDF7; }
-    }
-    th:first-child, td:first-child { width:20px; text-align:center; }
-    .line_selector { width:13px; height:13px; border:1px solid #ddd; background:transparent; margin:0 auto; padding:0; }
-    tr.line_selected>td>.line_selector, th>.line_selector.checked { background:url(@iconSpritePath) transparent -289px -1px; }
-  }
-
-  &.table-indent {
-    td, th { background:#fff !important; }
-    >tbody>tr:hover>td { background:#f5f5f5 !important; }
-    table>tbody>tr:first-child>td { border-top: 0; }
-  }
-
-  &.vtop { 
-    td, th { vertical-align:top; }
-  }
-  &.vmiddle {
-    td, th { vertical-align:middle; }
-  }
-  &.vbottom {
-    td, th { vertical-align:bottom; }
-  }
-
-  td.vtop, th.vtop { vertical-align:top; }
-  td.vmiddle, th.vmiddle { vertical-align:middle; }
-  td.vbottom, th.vbottom { vertical-align:bottom; }
-}
-
-
-/* ===== UI Slider ===== */
-
-.ui-slider {
-  position: relative;
-  text-align: left;
-  border: 1px solid #DDD;
-  .ui-slider-handle {
-    position: absolute;
-    z-index: 2;
-    width: 16px;
-    height: 16px;
-    cursor: default;
-    background: url(../img/handle.png) no-repeat;
-    border: none;
-    cursor: pointer;
-    outline: none;
-  }
-  .ui-slider-range {
-    position: absolute;
-    z-index: 1;
-    font-size: .7em;
-    display: block;
-    border: 0;
-    background: #08c;
-    .border-radius(4px);
-  }
-}
-.ui-slider-horizontal {
-  height: 8px;
-  background: #f6f6f6;
-  clear: both;
-  margin: 8px 0;
-  .border-radius(6px);
-  .ui-slider-handle { top: -5px; margin-left: -.6em; }
-  .ui-slider-range { top: 0; height: 100%; }
-  .ui-slider-range-min { left: 0; }
-  .ui-slider-range-max { right: 0; }
-}
-
-.ui-slider-vertical {
-  width: 6px;
-  height: 100px;
-  background: #f6f6f6;
-  .ui-slider-handle { left: -5px; margin-left: 0; margin-bottom: -.6em; }
-  .ui-slider-range { left: 0; width: 100%; background: #08C; }
-  .ui-slider-range-min { bottom: 0; }
-  .ui-slider-range-max { top: 0; }
-}
-
-.col-box {
+/*.col-box {
   .col-box-header {
     color:#555;
     font-weight:bold;
@@ -204,7 +114,8 @@ table {
     margin-top:10px;
     text-align:center;
   }
-}
+}*/
+
 .fullscreen() {
   float: none;
   width: 100%;
@@ -218,5 +129,3 @@ table {
 *:-ms-full-screen { .fullscreen(); }
 *:-o-full-screen { .fullscreen(); }
 *:full-screen { .fullscreen(); }
-
-@import 'chosen.less';
