--- a/webroot/css/less/base.less
+++ b/webroot/css/less/base.less
@@ -33,8 +33,9 @@ span.details {
   &.blue { color:#4a86e8; font-weight: bold; }
 }
 
-.loading_window { position:absolute; margin:-18px; background:url('../cake_tools/img/spinner.gif') transparent no-repeat; width:35px; height:35px; z-index:1201; top:50%; left:50%; }
-.ui-widget-overlay { position:absolute; background-color: #fff; opacity: 0.8; -moz-opacity: 0.8; filter:alpha(opacity=8); z-index:1200;}
+.ui-widget-overlay { position:absolute; background:#fff; .opacity(80); z-index:20002; }
+.loading_window { position:absolute; margin:-18px; background:url('../cake_tools/img/spinner.gif') transparent no-repeat; width:35px; height:35px; z-index:1201; top:50%; left:50%; z-index:20003; }
+
 .ui-state-active { 
   background:#468847;
   color:#fff;
