--- a/webroot/css/less/select2.less
+++ b/webroot/css/less/select2.less
@@ -1,5 +1,5 @@
 /*
-Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
+Version: 3.1 Timestamp: Tue Aug 14 09:05:17 PDT 2012
 */
 .select2-container {
     position: relative;
@@ -7,13 +7,13 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
     /* inline-block for ie7 */
     zoom: 1;
     *display: inline;
-
+    vertical-align: top;
 }
 
 .select2-container,
 .select2-drop,
 .select2-search,
-.select2-search input{
+.select2-search input {
   /*
     Force border-box so that % widths fit the parent
     container without overlap because of margin/padding.
@@ -29,11 +29,11 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 
 .select2-container .select2-choice {
     background-color: #fff;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eeeeee), color-stop(0.5, white));
-    background-image: -webkit-linear-gradient(center bottom, #eeeeee 0%, white 50%);
-    background-image: -moz-linear-gradient(center bottom, #eeeeee 0%, white 50%);
-    background-image: -o-linear-gradient(bottom, #eeeeee 0%, #ffffff 50%);
-    background-image: -ms-linear-gradient(top, #eeeeee 0%, #ffffff 50%);
+    // background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eeeeee), color-stop(0.5, white));
+    // background-image: -webkit-linear-gradient(center bottom, #eeeeee 0%, white 50%);
+    // background-image: -moz-linear-gradient(center bottom, #eeeeee 0%, white 50%);
+    // background-image: -o-linear-gradient(bottom, #eeeeee 0%, #ffffff 50%);
+    // background-image: -ms-linear-gradient(top, #eeeeee 0%, #ffffff 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#eeeeee', endColorstr = '#ffffff', GradientType = 0);
     background-image: linear-gradient(top, #eeeeee 0%, #ffffff 50%);
     -webkit-border-radius: 4px;
@@ -52,6 +52,7 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
     padding: 0 0 0 8px;
     color: #444;
     text-decoration: none;
+    text-align: left;
 }
 
 .select2-container.select2-drop-above .select2-choice
@@ -87,7 +88,7 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
   width: 12px;
   height: 12px;
   font-size: 1px;
-  background: url('../cake_tools/img/chosen-sprite.png') right top no-repeat;
+  background: url('../img/chosen.png') right top no-repeat;
   cursor: pointer;
   text-decoration: none;
   border:0;
@@ -157,7 +158,7 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 }
 
 .select2-container .select2-choice div b {
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 0 1px;
+    background: url('../img/chosen.png') no-repeat 0 1px;
     display: block;
     width: 100%;
     height: 100%;
@@ -181,13 +182,13 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 }
 
 .select2-search input {
-    background: #fff url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px;
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/chosen-sprite.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: #fff url('../img/chosen.png') no-repeat 100% -22px;
+    background: url('../img/chosen.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+    background: url('../img/chosen.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('../img/chosen.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('../img/chosen.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+    background: url('../img/chosen.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: url('../img/chosen.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
     padding: 4px 20px 4px 5px;
     outline: 0;
     border: 1px solid #aaa;
@@ -211,13 +212,13 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 }
 
 .select2-search input.select2-active {
-    background: #fff url('../cake_tools/img/spinner.gif') no-repeat 100%;
-    background: url('../cake_tools/img/spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-    background: url('../cake_tools/img/spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/spinner.gif') no-repeat 100%, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/spinner.gif') no-repeat 100%, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-    background: url('../cake_tools/img/spinner.gif') no-repeat 100%, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: #fff url('../img/spinner.gif') no-repeat 100%;
+    background: url('../img/spinner.gif') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+    background: url('../img/spinner.gif') no-repeat 100%, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('../img/spinner.gif') no-repeat 100%, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+    background: url('../img/spinner.gif') no-repeat 100%, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
+    background: url('../img/spinner.gif') no-repeat 100%, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: url('../img/spinner.gif') no-repeat 100%, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
 }
 
 
@@ -310,11 +311,8 @@ Version: 3.0 Timestamp: Tue Jul 31 21:09:16 PDT 2012
 .select2-results .select2-highlighted em {
   background: transparent;
 }
-.select2-results .select2-no-results {
-  background: #f4f4f4;
-  display: list-item;
-}
-
+.select2-results .select2-no-results,
+.select2-results .select2-searching,
 .select2-results .select2-selection-limit {
   background: #f4f4f4;
   display: list-item;
@@ -339,7 +337,7 @@ disabled look for already selected choices in the results dropdown
 }
 
 .select2-more-results.select2-active {
-    background: #f4f4f4 url('../cake_tools/img/spinner.gif') no-repeat 100%;
+    background: #f4f4f4 url('../img/spinner.gif') no-repeat 100%;
 }
 
 .select2-more-results {
@@ -422,7 +420,7 @@ disabled look for already selected choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
-    background: #fff url('../cake_tools/img/spinner.gif') no-repeat 100% !important;
+    background: #fff url('../img/spinner.gif') no-repeat 100% !important;
 }
 
 .select2-default {
@@ -470,7 +468,7 @@ disabled look for already selected choices in the results dropdown
   width: 12px;
   height: 13px;
   font-size: 1px;
-  background: url('../cake_tools/img/chosen-sprite.png') right top no-repeat;
+  background: url('../img/chosen.png') right top no-repeat;
   outline: none;
 }
 
