ViewJs folder route and silent errors db handles

--- a/webroot/css/less/tables.less
+++ b/webroot/css/less/tables.less
@@ -15,7 +15,7 @@ table {
 
   &.table-indent {
     td, th { background:#fff !important; }
-    >tbody>tr:hover>td { background:#f5f5f5 !important; }
+    >tbody>tr:hover>td, >tfoot>tr:hover>td { background:#f5f5f5 !important; }
     table>tbody>tr:first-child>td { border-top: 0; }
   }
 
