REST ++ & indented tables

--- a/webroot/css/less/tables.less
+++ b/webroot/css/less/tables.less
@@ -32,4 +32,9 @@ table {
   td.vtop, th.vtop { vertical-align:top; }
   td.vmiddle, th.vmiddle { vertical-align:middle; }
   td.vbottom, th.vbottom { vertical-align:bottom; }
+
+  &.table>tfoot>tr>td {
+    padding-top: 30px;
+    >div { margin:0; }
+  }
 }
