--- a/webroot/css/less/col-box.less
+++ b/webroot/css/less/col-box.less
@@ -6,7 +6,9 @@
     .modal-header;
   }
   .col-box-body {
-    .modal-body;
+    position: relative;
+    overflow-y: auto;
+    padding: 15px;
   }
   .col-box-footer {
     .modal-footer;
