--- a/webroot/css/less/tables.less
+++ b/webroot/css/less/tables.less
@@ -14,8 +14,8 @@ table {
   }
 
   &.table-indent {
-    td, th { background:#fff !important; }
-    >tbody>tr:hover>td, >tfoot>tr:hover>td { background:#f5f5f5 !important; }
+    tr { background:#fff; }
+    >tbody>tr:hover, >tfoot>tr:hover { background:#f5f5f5; }
     table>tbody>tr:first-child>td { border-top: 0; }
   }
 
